#0 - treatments tab btn alignment fixed.

--- a/ui/app/styles/clinical/_treatment.scss
+++ b/ui/app/styles/clinical/_treatment.scss
@@ -250,3 +250,7 @@
     }
 }
 
+.undo-btn {
+    min-width: 43px;
+}
+
